# gpu-work

./: .gitignore  .gitmodules
260404Orca复用密钥/: .gitignore  Orca复用密钥.md  dcf_benchmark_reuse.cu
260404Orca批大小与性能线性增长没有起到加速作用/: .gitignore  Orca批大小与性能线性增长没有起到加速作用.md  orca_compute_only_benchmark.cu  run_orca_compute_only_scaling.py  run_orca_scaling_analysis.py
260404三个实现横向比较/: .gitignore  CMakeLists.txt  Orca README论文参数对照.md  libfss_batch_bench.cpp  myl7_batch_bench.cu  run_compare.sh  三个实现横向比较.md
260404复用密钥/: .gitignore  dcf_benchmark_reuse.cu  dpf_benchmark_reuse.cu  复用密钥.md
260404重构libfss/: .gitignore  libfss_batch_bench.cpp  run_libfss_bench.sh  重构libfss.md
260404重构myl7/: .gitignore  myl7_cpu_bench_template.cu.in  myl7_gpu_bench_template.cu.in  results_myl7_cpu_dcf_bin64_bout1_n10000000.txt  results_myl7_cpu_dpf_bin64_n10000000.txt  run_myl7_bench.py  run_myl7_cpu_bench.py  重构myl7.md
260409完全对齐Orca和myl7/: .gitignore  CMakeLists.txt  dcf_bench_common.h  dpf_bench_common.h  libfss_aesni_shim.cpp  libfss_dcf_batch_keygen_bench.cu  libfss_dcf_singlekey_bench.cu  libfss_dpf_batch_keygen_bench.cu  libfss_dpf_singlekey_bench.cu  myl7_cpu_dcf_batch_keygen_bench.cu  myl7_cpu_dcf_singlekey_bench.cu  myl7_cpu_dpf_batch_keygen_bench.cu  myl7_cpu_dpf_singlekey_bench.cu  myl7_dcf_batch_keygen_bench.cu  myl7_dcf_singlekey_bench.cu  myl7_dpf_batch_keygen_bench.cu  myl7_dpf_singlekey_bench.cu  orca_dcf_batch_keygen_bench.cu  orca_dcf_singlekey_bench.cu  orca_dpf_batch_keygen_bench.cu  orca_dpf_singlekey_bench.cu  prepare_deps.sh  run_dcf_benchmarks.sh  run_dpf_benchmarks.sh  完全对齐Orca和myl7.md
old_md/: benchmark技术细节.md  剥离_work.md  性能对比_work.md
周报/: 周报3.29-4.4.md
